2011-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Fixed false value in foreach

2011-08-12  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/estado_agente.php: Fixed: Agent Search engine fails with blank at the beginning or end.

2011-08-12 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/exportdata.php: Fixed table style to page width 
	and text aligned to center.

2011-08-12 Javier Lanz <javier.lanz@artica.es>

	* include/config_process.php: Removed a forgotten html_debug_print call

2011-08-12 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/exportdata.php: Fixed calculating process to get
	module data within a period.

	Fixes: #3389996

2011-08-11  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	godmode/setup/setup_visuals.php: Fixed flash charts setup editor
	and user editor and set priority between both

2011-08-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	operation/incidents/incident_statistics.php: Fixed flash graphs
	into incidents statistics and added the group All to the Pie
	by groups into incident statistics

2011-08-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.data.oracle.sql: Removed tskin data from this script.

2011-08-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* extensions/net_tools.php: Fixed a small bug related with agent
	without IP  

2011-08-11  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/stat_win.php: Fixed bad url build with 
	database host value. Now with SERVER_NAME from $_SERVER 

2011-08-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/modules/manage_nc_groups.php: Fixed some problems with pagination 
	
2011-08-11  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/tactical.php: Fixed and improved wrong and ugly
	links from tactical view

2011-08-10  Miguel de Dios  <miguel.dedios@artica.es>
